# excelFormExtractor

./: .gitignore  MANIFEST.in  README.md  armv7l.Dockerfile  go.mod  go.sum  pyproject.toml  setup.py  setup_ci.py
.github/workflows/: build.yaml
app/: Example_2.xlsx  lib.go  main.go
cmd/excelExtractor/: main.go
cmd/excelFormExtractor/: main.go
internal/extractor/: errors.go  models.go  seccf_extractor.go
internal/parser/: seccf_parser.go
pkg/extractor/: models.go  seccf_extractor.go
pkg/utils/: utils.go
